# asuka-fund-risk-monitor

./: .gitattributes  .gitignore  README.md  apply_verified_wac.py  backfill_edinet_codes.py  bloomberg_price_pull.py  book_hygiene_check.py  broker_price_fallback.py  dashboard.html  dashboard_core.py  dashboard_data.json  dump_xbrl.bat  edinet_backfill.py  edinet_backfill_data.json  edinet_code_map.json  edinet_filings_ingest.py  email_digest.py  filing_parser.py  filings_today.json  first_run.bat  generate_dashboard.py  news_scan.py  pm_watchlist.csv  run_daily_dashboard.py  run_dashboard.bat  run_email_digest.bat  swap_book.bat  test_filing_engine.py  test_wac.bat  wac_xbrl_dump.py  yahoo_intraday_price_pull.py  yahoo_price_pull.py
backend/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
backend/.claude/: settings.json
backend/.claude/agents/: attribution-auditor.md  dashboard-renderer.md  filing-verifier.md  news-scanner.md  position-auditor.md  scenario-author.md
backend/.claude/commands/: morning-run.md  server.md  unlock.md  verify.md
backend/data/: activist_universe.yaml  positions.json
backend/docs/: runbook.md
backend/docs/frameworks/: activist-tiers.md  conviction-scoring.md  price-sources.md  pwer.md  refresh-discipline.md  strategic-source-tags.md
backend/pipeline/: orchestrator.py  server.py
backend/pipeline/engine/: action.py  attribution.py  audit.py  conviction.py  tilt.py
backend/scripts/: asuka_dashboard_task.xml  run_dashboard.bat
backend/tests/: test_engine.py  test_prices_yahoo_intraday.py
(+127 files in other folders)
